tests/NormalTests/paczka1/fuzzy1/28937703.err
Error in line 9: KEpQSplp S523 26,86
Error in line 12: KEpQSplp A741 90,1
Error in line 16: KEpQSplp S315 90,3
Error in line 27: KEpQSplp S919 18,6
Error in line 24: nUILZVOITW A741 78,2
Error in line 32: ZkO S523 40,2
